# glyphwright

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/developer-guide/: testing.md
docs/knowledge/: architecture.md  index.md  product-vision.md  terminology.md  verification-model.md
schemas/: glyphwright.event.v1.json  glyphwright.event.v2.json  glyphwright.event.v3.json  glyphwright.event.v4.json  glyphwright.event.v5.json  glyphwright.event.v6.json  glyphwright.event.v7.json  glyphwright.event.v8.json  glyphwright.event.v9.json  glyphwright.frame.v1.json  glyphwright.frame.v2.json  glyphwright.frame.v3.json  glyphwright.frame.v4.json  glyphwright.frame.v5.json  glyphwright.frame.v6.json  glyphwright.query.v1.json  glyphwright.recording.v1.json  glyphwright.rejection.v1.json  glyphwright.session.v1.json  glyphwright.session.v2.json
spikes/termverify-direct-adapter/: README.md  glyphwright_application.py  run_spike.py
src/glyphwright/: api.py  (+2 more)
tests/: conftest.py  regenerate_goldens.py  regenerate_tiles.py  test_abilities.py  test_api.py  test_battle.py  test_cli_e2e.py  test_clickmove.py  test_combat.py  test_determinism.py  test_dialogue.py  test_fov.py  test_frontends.py  test_goldens.py  test_gui_cli.py  test_gui_e2e.py  test_gui_scene.py  test_hooks_perks.py  test_items.py  test_kernel.py  test_loader.py  test_lockpick.py  test_manifest.py  test_package.py  test_pathfinding.py  test_properties.py  test_query.py  test_recording.py  test_resources.py  test_rng.py  test_rooms.py  test_scenegraph.py  test_stats.py  test_tactics.py  test_tiered_frame.py  test_tui.py  test_ue5_audit.py  test_ue5_client.py  test_ue5_e2e.py  test_ue5_importer.py  (+3 more)
(+93 files in other folders)
